samples/_failures_safe/1761328550_5f2b3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21fb519b.c: In function ‘print_result’:
./samples/SAFE/__tmp_21fb519b.c:145:46: error: missing terminating " character
  145 |         case STATUS_UNSUPPORTED_TYPE: printf("Un
      |                                              ^~~
./samples/SAFE/__tmp_21fb519b.c:145:9: error: expected expression at end of input
  145 |         case STATUS_UNSUPPORTED_TYPE: printf("Un
      |         ^~~~
./samples/SAFE/__tmp_21fb519b.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21fb519b.c:145:9: error: expected declaration or statement at end of input
